openmolar (0.4.06+bzr0833-0~__DIST__0) __DIST__; urgency=low

  * upstream changes

 -- Neil Wallace <rowinggolfer@googlemail.com>  Thu, 13 Jun 2013 22:29:30 +0100


openmolar (0.4.06+bzr0832-0~__DIST__0) __DIST__; urgency=low

  * upstream changes

 -- Neil Wallace <rowinggolfer@googlemail.com>  Thu, 13 Jun 2013 15:21:47 +0100


openmolar (0.4.05+bzr0832-0~__DIST__0) __DIST__; urgency=low

  * upstream changes

 -- Neil Wallace <rowinggolfer@googlemail.com>  Mon, 10 Jun 2013 13:41:09 +0100


openmolar (0.4.04+bzr0831-0~__DIST__0) __DIST__; urgency=low

  * upstream changes

 -- Neil Wallace <rowinggolfer@googlemail.com>  Mon, 10 Jun 2013 10:06:54 +0100


openmolar (0.4.03+bzr0830-0~__DIST__0) __DIST__; urgency=low

  * upstream changes

 -- Neil Wallace <rowinggolfer@googlemail.com>  Fri, 07 Jun 2013 12:45:53 +0100


openmolar (0.4.02+bzr0829-0~__DIST__0) __DIST__; urgency=low

  * upstream changes

 -- Neil Wallace <rowinggolfer@googlemail.com>  Tue, 04 Jun 2013 18:01:24 +0100


openmolar (0.4.01+bzr0828-0~__DIST__0) __DIST__; urgency=low

  * upstream changes

 -- Neil Wallace <rowinggolfer@googlemail.com>  Mon, 27 May 2013 22:07:08 +0100


openmolar (0.4.0+bzr0827-0~__DIST__0) __DIST__; urgency=low

  * upstream release

 -- Neil Wallace <rowinggolfer@googlemail.com>  Mon, 27 May 2013 16:13:31 +0100


openmolar (0.3.9+bzr0825-0~__DIST__0) __DIST__; urgency=low

  * upstream changes

 -- Neil Wallace <rowinggolfer@googlemail.com>  Fri, 24 May 2013 10:50:59 +0100


openmolar (0.3.9+bzr0824-0~__DIST__0) __DIST__; urgency=low

  * upstream release

 -- Neil Wallace <rowinggolfer@googlemail.com>  Thu, 23 May 2013 11:30:51 +0100


openmolar (0.3.8+bzr0822-0~__DIST__0) __DIST__; urgency=low

  * reinstated address search when no relatives linked

 -- Neil Wallace <rowinggolfer@googlemail.com>  Tue, 21 May 2013 23:17:37 +0100


openmolar (0.3.8+bzr0820-0~__DIST__0) __DIST__; urgency=low

  * bugfix for 0.3.8
