@@ -1,3 +1,10 @@
+openmolar (0.4.06+bzr0836-0~__DIST__0) __DIST__; urgency=low
+
+  * upstream changes
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Mon, 24 Jun 2013 10:00:12 +0100
+
+
 openmolar (0.4.06+bzr0833-0~__DIST__0) __DIST__; urgency=low
 
   * upstream changes
